# ai-red-teaming-framework

./: .env.example  .gitignore  README.md  conftest.py  main.py  pyproject.toml
config/: garak_config.json
docs/: architecture.md  campaign-spec.md  plugin-development.md  report-model.md  target-contract.md
examples/templates/: attack_garak.yaml  attack_pyrit_crescendo.yaml  attack_pyrit_dataset.yaml  attack_pyrit_red_teaming.yaml  campaign.yaml
schemas/: attack.schema.json  campaign.schema.json  report.schema.json
scripts/: get_token.py  okapi.py  values.py
scripts/certs/: OrangeG2.crt
src/: settings.py  settings_copy.py
src/core/: utils.py
src/core/application/: __init__.py  campaign_config.py  campaign_loader.py  health_check.py
src/core/contracts/: adapter.py  normalizer.py  runner.py
src/core/models/: attack.py  attack_result.py  attack_target.py
src/core/orchestration/: attack_orchestrator.py
src/core/results/: json_report_store.py  report_viewer.py
src/frameworks/garak/: garak_attack.py  garak_normalizer.py  garak_runner.py
src/frameworks/pyrit/: pyrit_adapter.py  pyrit_attack.py  (+2 more)
src/redteaming/: __init__.py
src/settings/: __init__.py  pyrit.py  runtime.py
tests/application/: test_campaign_loader.py  test_runtime_settings.py
tests/cli/: test_cli_commands.py
tests/contract/: test_schema_fixtures.py
tests/fixtures/: README.md
tests/frameworks/: __init__.py  test_garak_runner.py  test_pyrit_runner.py
tests/orchestration/: test_attack_orchestrator.py
tests/results/: test_json_report_store.py  test_report_viewer.py
(+44 files in other folders)
