[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redteaming"
version = "0.1.0"
description = "Behavior-preserving red teaming framework packaging baseline"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "requests>=2.28",
    "PyYAML>=6.0",
    "streamlit>=1.30",
    "pyrit>=0.12",
    "garak>=0.14",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.0",
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
redteaming = "redteaming.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["redteaming*"]




